--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,6 +3,11 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
 
+  <div>
+    Change your <%= f.label :avatar %>
+    <p> <%=f.file_field :avatar %> </p>
+  </div>
+
   <div class="field">
     <%= f.label :first_name %><br />
     <%= f.text_field :firstName, autofocus: true, autocomplete: "firstName" %>
