--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,6 +3,12 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
+
+  <div>
+    Add an <%= f.label :avatar %>
+    <p> <%=f.file_field :avatar %> </p>
+  </div>
+
   <div class="field">
     <%= f.label :first_name %><br />
     <%= f.text_field :firstName, autofocus: true, autocomplete: "firstName" %>
