--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,8 +1,11 @@
 <h1>Event#index</h1>
 <p>Find me in app/views/event/index.html.erb</p>
 
-<%= form_tag events_search_path, method: :get do %>
-  <%= label_tag(:search_input, "search for events:") %>
-  <%= text_field_tag(:search_input) %>
-  <%= submit_tag("Search") %>
-<% end %>
+
+
+<form class="">
+  <input type="text" id='search-value' value='imagine dragons'name="" placeholder="search for events">
+  <input type="submit" id='search-submit' >
+</form>
+
+<div id='results'></div>
