search and create form generation

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -3,9 +3,9 @@
 
 
 
-<form class="">
-  <input type="text" id='search-value' value='imagine dragons'name="" placeholder="search for events">
-  <input type="submit" id='search-submit' >
-</form>
+
+  <input type="text" id='search-value' value=''name="" placeholder="search for events">
+  <input type="submit" id='search-submit' value='search'>
+
 
 <div id='results'></div>
