--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,11 +1,6 @@
 <h1>Event#index</h1>
 <p>Find me in app/views/event/index.html.erb</p>
 
-
-
-  
-  <input type="text" id='search-value' value=''name="" placeholder="search for events">
-  <input type="submit" id='search-submit' value='search'>
-
-
-<div id='results'></div>
+<% @events.each do |e| %>
+    <a href="/events/<%= e.id %>"><div><%= e.performer %></div></a>
+<% end %>
