--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,2 +1,8 @@
 <h1>Event#new</h1>
 <p>Find me in app/views/event/new.html.erb</p>
+
+<input type="text" id='search-value' value=''name="" placeholder="search for events">
+<input type="submit" id='search-submit' value='search'>
+
+
+<div id='results'></div>
