--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -3,4 +3,8 @@
 <%= @event.performer %>
 <% if @event.user_id != current_user.id %>
   <a href="#">Create Match!</a>
+<% else %>
+
+<%= link_to 'Delete', event_path, method: :delete,
+                       data: { confirm: 'Are you sure?' } %>
 <% end %>
