--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,7 @@
 <div class="profilepage" ><%= image_tag @user.avatar.url(:medium) %></div>
+<%=@user.followers.count%>
+<%=render "follow_button"%>
 <h1><%=@user.username%> </h1>
 <h4><%=full_name%></h4>
-
 <h4><%=@user.location%> </h4>
 <p> <%=@user.aboutMe%> </p>
