--- a/app/views/users/_follow_button.html.erb
+++ b/app/views/users/_follow_button.html.erb
@@ -1,3 +1,4 @@
+<% if user_signed_in? %>
 <% if current_user.id != @user.id %>
     <div class="panel panel-default">
         <div class="panel-body">
@@ -16,4 +17,5 @@
             </center>
         </div>
     </div>
+    <% end %>
 <% end %>
