--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,6 +1,20 @@
 <h1>Event#index</h1>
 <p>Find me in app/views/event/index.html.erb</p>
 
+<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="https://msps.blob.core.windows.net/mspsmedia/2017/06/DR_microsoft_kinect_neon_indian_MG_3679-5956db984e6f5.jpg" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="http://farm9.staticflickr.com/8471/8100566896_6f547658bb.jpg" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src=".../800x400?auto=yes&bg=555&fg=333&text=Third slide" alt="Third slide">
+    </div>
+  </div>
+</div>
+
 <% @events.each do |e| %>
     <a href="/events/<%= e.id %>"><div><%= e.performer %></div></a>
 <% end %>
