--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,25 +11,36 @@
   </head>
 
   <body>
-    <%= link_to 'Events', events_path, class:'' %>
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
+      <a class="navbar-brand" href="#">MusicMatch</a>
+      <div class="navbar-nav ml-auto">
+      <span class="navbar-text">
+    <%= link_to 'Events', events_path, class:"nav-link" %>
+      </span>
     <% if user_signed_in? %>
-      |
-      <%= link_to 'Create Event', new_event_path, class:'' %>
-      |
-      <%= link_to'Logout', destroy_user_session_path, method: :delete, class:"" %>
-      |
-
-      <%= link_to 'Edit', edit_user_registration_path %>
+        <span class="navbar-text">
+          <%= link_to 'Create Event', new_event_path, class:"nav-link" %>
+        </span>
+        <span class="navbar-text">
+        <%= link_to 'Edit', edit_user_registration_path, class:"nav-link" %>
+        </span>
+        <span class="navbar-text">
+          <%= link_to'Logout', destroy_user_session_path, method: :delete, class:"nav-link"%>
+        </span>
       <div class="currentUserNavbar">
       <a href="/users/<%=current_user.id%>"><%= image_tag(current_user.avatar.url(:thumb))%> </a>
       </div>
 
     <% else %>
-      |
-      <%= link_to "Sign Up", new_user_registration_path, class:"" %>
-      |
-      <%= link_to "Log In", new_user_session_path, class:"" %>
+      <span class="navbar-text">
+      <%= link_to "Sign Up", new_user_registration_path, class:"nav-link" %>
+    </span>
+    <span class="navbar-text">
+      <%= link_to "Log In", new_user_session_path, class:"nav-link" %>
+    </span>
       <% end %>
+    </div>
+      </nav>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
