--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<div class="profilepage" ><%= image_tag @user.avatar.url(:medium) %></div>
+<div class="profilepage" ><%= image_tag @user.avatar.url(:medium), class: "img-fluid" %></div>
 <%=@user.followers.count%>
 <%=render "follow_button"%>
 <h1><%=@user.username%> </h1>
