--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,15 +8,18 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <script type='text/javascript' src='config.js'></script>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link rel="icon" href="/assets/music.png">
+
   </head>
 
   <body>
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
-      <a class="navbar-brand" href="#">MusicMatch</a>
-      <div class="navbar-nav ml-auto">
-      <span class="navbar-text">
-    <%= link_to 'Events', events_path, class:"nav-link" %>
-      </span>
+      <a class="navbar-brand" href="/events">MusicMatch</a>
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+     <div class="collapse navbar-collapse" id="navbarResponsive">
+         <div class="navbar-nav ml-auto">
     <% if user_signed_in? %>
         <span class="navbar-text">
           <%= link_to 'Create Event', new_event_path, class:"nav-link" %>
@@ -27,7 +30,7 @@
         <span class="navbar-text">
           <%= link_to'Logout', destroy_user_session_path, method: :delete, class:"nav-link"%>
         </span>
-      <div class="currentUserNavbar">
+      <div class="nav-item">
       <a href="/users/<%=current_user.id%>"><%= image_tag(current_user.avatar.url(:thumb))%> </a>
       </div>
 
@@ -39,6 +42,7 @@
       <%= link_to "Log In", new_user_session_path, class:"nav-link" %>
     </span>
       <% end %>
+    </div>
     </div>
       </nav>
     <p class="notice"><%= notice %></p>
