--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Event#index</h1>
 <p>Find me in app/views/event/index.html.erb</p>
 
-<% @events.each do |e| %>
+<% @events.reverse.take(20).each do |e| %>
     <a href="/events/<%= e.id %>"><div><%= e.performer %></div></a>
 <% end %>
