--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,21 +1,37 @@
-<h1>Event#show</h1>
-<p>Find me in app/views/event/show.html.erb</p>
 
+<div><img class="" src="<%= @event.img_url %>"></div>
 <%= @event.performer %>
+<div>Created by: <%= User.find(@event.user_id).username %></div>
+<div><%= @event.location %></div>
+<div>
+  To get more information or buy tickets click
+  <a target="_blank" href="<%=@event.url%>">here.</a>
+</div>
+<div>Ticket price range: <%= @event.price_min %> - <%= @event.price_max %></div>
+<%= @event.url %>
+<% if @matches.exists? %>
+  <div>Matches:
+    <% @matches.each do |m| %>
+    <div><%= User.find(m.user_id).username %></div>
+    <% end %>
+  </div>
+<% end %>
+
+
 
 <% if user_signed_in? %>
-  <% if @event.user_id != current_user.id %>
+  <% if @event.user_id != current_user.id && !Match.where(user_id: current_user.id).exists?%>
 
-    <%= form_for :matches, url: {action: "create", controller: "matches"} do |f| %>
-    <%= hidden_field_tag "event_id", @event.id %>
-    <%= f.submit %>
+    <form class="" action="/assign" method="post">
+      <input type="hidden" name="event_id" value="<%= @event.id %>">
+      <input type="submit" name="submit" value="match!">
+    </form>
 
-  <%end%>
 
-
-  <% else %>
+<% end %>
+<% if @event.user_id == current_user.id %>
     <%= link_to 'Delete', event_path, method: :delete,
                         data: { confirm: 'Are you sure?' } %>
-    <% end %>
 
+<% end %>
 <% end %>
