--- a/app/views/matches/edit.html.erb
+++ b/app/views/matches/edit.html.erb
@@ -1,2 +1,2 @@
-<h1>Match#edit</h1>
-<p>Find me in app/views/match/edit.html.erb</p>
+<%= link_to 'Delete Match', match_path, method: :delete,
+                    data: { confirm: 'Are you sure?' } %>
