--- a/app/views/public_activity/event/_create.html.erb
+++ b/app/views/public_activity/event/_create.html.erb
@@ -2,5 +2,5 @@ Started An
 <% if activity.trackable && activity.trackable.present? %>
   <%= link_to activity.trackable_type, activity.trackable %>
 <% else %>
-  Event which has since been removed
+  Event which has since been Cancelled
 <% end %>
