--- a/app/assets/stylesheets/_event.scss
+++ b/app/assets/stylesheets/_event.scss
@@ -9,5 +9,12 @@
   border: 2px solid black;
   border-radius: 50px;
   height: 500px;
-  overflow: scroll;
+  overflow-y: hidden;
+}
+
+.box-content{
+  height:350px;
+  width:450px;
+  overflow:auto;
+  border-radius:8px;
 }
