--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
+<div class="card">
 <div class="profilepage" ><%= image_tag @user.avatar.url(:medium), class: "img-fluid" %></div>
 <%=@user.followers.count%>
 <%=render "follow_button"%>
@@ -49,3 +50,4 @@
   <% end %>
 <% end %>
 <% end %>
+</div>
