--- a/app/views/matches/edit.html.erb
+++ b/app/views/matches/edit.html.erb
@@ -1,2 +1,4 @@
+<h3>Are you sure you don't want to go to this event?</h3>
+
 <%= link_to 'Delete Match', match_path, method: :delete,
                     data: { confirm: 'Are you sure?' } %>
