new styles navbar etc

--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,8 +1,7 @@
-<h1>Event#new</h1>
-<p>Find me in app/views/event/new.html.erb</p>
-
-<input type="text" id='search-value' value=''name="" placeholder="search for events">
+<div class="search">
+<input type="text" id='search-value' value=''name="" placeholder="search for events" size="40" >
 <input type="submit" id='search-submit' value='search'>
+</div>
 
 
 <div id='results'></div>
