--- a/app/views/matches/edit.html.erb
+++ b/app/views/matches/edit.html.erb
@@ -1,2 +1,2 @@
-<%= link_to 'Delete Match', match_path, method: :delete,
+<%= link_to 'Delete Match?', match_path, method: :delete,
                     data: { confirm: 'Are you sure?' } %>
