--- a/app/views/public_activity/event/_create.html.erb
+++ b/app/views/public_activity/event/_create.html.erb
@@ -1,6 +1,8 @@
-Started An
+<div class ="create-text">
+Created An
 <% if activity.trackable && activity.trackable.present? %>
   <%= link_to activity.trackable_type, activity.trackable %>
 <% else %>
   Event which has since been Cancelled
 <% end %>
+</div>
