--- a/app/assets/stylesheets/_event.scss
+++ b/app/assets/stylesheets/_event.scss
@@ -6,10 +6,12 @@
 }
 
 .col{
-  border: 2px solid black;
+  margin: 10px;
+  background: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   border-radius: 50px;
   height: 500px;
-  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 .box-content{
@@ -17,4 +19,43 @@
   width:450px;
   overflow:auto;
   border-radius:8px;
+}
+
+.events-card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    margin: auto;
+    text-align: center;
+}
+
+.col-lg-8{
+  margin: 10px;
+  background: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 50px;
+  height: 500px;
+}
+
+input{
+    -webkit-border-radius: 50px;
+-moz-border-radius: 50px;
+border-radius: 50px;
+}
+
+.search {
+    padding-top: 50px;
+    margin: auto;
+    text-align: center;
+}
+
+#results{
+  margin: 10px;
+  background: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.show-page{
+  margin: 10px;
+  background: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 50px;
 }
