--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,13 +1,14 @@
-
-<div><img class="" src="<%= @event.img_url %>"></div>
+<div class="show-page">
+<div class="events-card">
+<div><img src="<%= @event.img_url %>" height="500px"></div>
 <%= @event.performer %>
 <div>Created by: <%= User.find(@event.user_id).username %></div>
 <div><%= @event.location %></div>
 <div>
   To get more information or buy tickets click
-  <a target="_blank" href="<%=@event.url%>">here.</a>
+  <a class="badge badge-info" target="_blank" href="<%=@event.url%>">here.</a>
 </div>
-<div>Ticket price range: <%= @event.price_min %> - <%= @event.price_max %></div>
+<div>Ticket price range: $<%= @event.price_min %> - $<%= @event.price_max %></div>
 <%= @event.url %>
 <% if @matches.exists? %>
   <div>Matches:
@@ -24,14 +25,15 @@
 
     <form class="" action="/assign" method="post">
       <input type="hidden" name="event_id" value="<%= @event.id %>">
-      <input type="submit" name="submit" value="match!">
+      <input class="btn btn-success" type="submit" name="submit" value="MATCH!">
     </form>
 
 
 <% end %>
 <% if @event.user_id == current_user.id %>
-    <%= link_to 'Delete', event_path, method: :delete,
-                        data: { confirm: 'Are you sure?' } %>
+    <div class="btn btn-danger"><%= link_to 'Delete', event_path, method: :delete,
+                        data: { confirm: 'Are you sure?' } %></div>
 
 <% end %>
 <% end %>
+</div>
