--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,8 @@
 
   </head>
 
-  <body>
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <body <body style="background-color:#262324">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light fixed-top" style="background-color: #14A697">
       <a class="navbar-brand" href="/events">MusicMatch</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
