--- a/app/views/users/_follow_button.html.erb
+++ b/app/views/users/_follow_button.html.erb
@@ -11,7 +11,7 @@
                 <% else %>
                     <%= form_for(current_user.active_relationships.find_by(followed_id: @user.id),
                         html: { method: :delete }) do |f| %>
-                        <%= f.submit "Unfollow", class: "btn" %>
+                        <%= f.submit "Unfollow", class: "btn btn-outline-secondary" %>
                     <% end %>
                 <% end %>
             </center>
