chat windows now shows avatar pictures

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,8 +18,10 @@
       |
       <%= link_to'Logout', destroy_user_session_path, method: :delete, class:"" %>
       |
-
       <%= link_to 'Edit', edit_user_registration_path %>
+      |
+      <%= link_to 'Chat', rooms_show_path %>
+
       <div class="currentUserNavbar">
       <a href="/users/<%=current_user.id%>"><%= image_tag(current_user.avatar.url(:thumb))%> </a>
       </div>
