--- a/app/assets/stylesheets/_layout.scss
+++ b/app/assets/stylesheets/_layout.scss
@@ -18,3 +18,11 @@ img { width: 100% }
 .navbar{
   height: 55px;
 }
+
+#pg-title {
+  font-family: 'Comfortaa', cursive;
+  font-weight: bold;
+  font-size: 40px;
+  color: white;
+
+}
