--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,12 +9,13 @@
     <script type='text/javascript' src='config.js'></script>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <link rel="icon" href="/assets/music.png">
+    <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
 
   </head>
 
   <body <body style="background-color:#262324">
     <nav class="navbar fixed-top navbar-expand-lg navbar-light fixed-top" style="background-color: #14A697">
-      <a class="navbar-brand" href="/events">MusicMatch</a>
+      <a id='pg-title' class="navbar-brand" href="/events">MusicMatch</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
