--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -8,7 +8,11 @@
   To get more information or buy tickets click
   <a class="badge badge-info" target="_blank" href="<%=@event.url%>">here.</a>
 </div>
+<% if @event.price_min == @event.price_max %>
+  <div>Ticket price: $<%= @event.price_min %></div>
+<% else %>
 <div>Ticket price range: $<%= @event.price_min %> - $<%= @event.price_max %></div>
+<%end%>
 <%= @event.url %>
 <% if @matches.exists? %>
   <div>Matches:
@@ -31,7 +35,7 @@
 
 <% end %>
 <% if @event.user_id == current_user.id %>
-  
+
     <div class="btn btn-danger"><%= link_to 'Delete', event_path, method: :delete,
                         data: { confirm: 'Are you sure? You will delete this event and all matches.' } %></div>
 
