--- a/app/assets/stylesheets/_event.scss
+++ b/app/assets/stylesheets/_event.scss
@@ -59,3 +59,8 @@ border-radius: 50px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   border-radius: 50px;
 }
+
+#video-background{
+  width: 100%;
+  margin: -100;
+}
