--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,16 +1,8 @@
-<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="https://msps.blob.core.windows.net/mspsmedia/2017/06/DR_microsoft_kinect_neon_indian_MG_3679-5956db984e6f5.jpg" height="600" alt="First slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="http://farm9.staticflickr.com/8471/8100566896_6f547658bb.jpg" height="600" alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="https://i.ytimg.com/vi/tgV4tZRR7p0/maxresdefault.jpg" height="600" alt="Third slide">
-    </div>
-  </div>
-</div>
+<video autoplay loop id="video-background" muted plays-inline>
+  <source src="/assets/IndoorPartyFootage&Crowd4.mp4" type="video/mp4">
+</video>
+
+<h1>Don't Miss A Momment</h1>
 
 <div class="container-fluid">
  <div class="row align-items-start">
@@ -36,4 +28,3 @@
 </div>
 </div>
 </div>
-
