--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,8 +1,11 @@
-<video autoplay loop id="video-background" muted plays-inline>
-  <source src="/assets/IndoorPartyFootage&Crowd4.mp4" type="video/mp4">
-</video>
+<div class="video-container">
+  <video autoplay loop id="video-background" muted plays-inline>
+    <source src="/assets/IndoorPartyFootage&Crowd4.mp4" type="video/mp4">
+  </video>
+</div>
 
-<h1>Don't Miss A Momment</h1>
+
+<h1 class="header" >Never Miss A Moment!</h1>
 
 <div class="container-fluid">
  <div class="row align-items-start">
