--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,18 +9,22 @@
     <script type='text/javascript' src='config.js'></script>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <link rel="icon" href="/assets/music.png">
+    <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
 
   </head>
 
   <body <body style="background-color:#262324">
     <nav class="navbar fixed-top navbar-expand-lg navbar-light fixed-top" style="background-color: #14A697">
-      <a class="navbar-brand" href="/events">MusicMatch</a>
+      <a id='pg-title' class="navbar-brand" href="/events">MusicMatch</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
      <div class="collapse navbar-collapse" id="navbarResponsive">
          <div class="navbar-nav ml-auto">
     <% if user_signed_in? %>
+        <span class="navbar-text">
+        <%= link_to 'Chat', rooms_show_path, class:"nav-link" %>
+      </span>
         <span class="navbar-text">
           <%= link_to 'Create Event', new_event_path, class:"nav-link" %>
         </span>
@@ -31,6 +35,7 @@
           <%= link_to'Logout', destroy_user_session_path, method: :delete, class:"nav-link"%>
         </span>
       <div class="nav-item">
+
       <a href="/users/<%=current_user.id%>"><%= image_tag(current_user.avatar.url(:thumb))%> </a>
       </div>
 
@@ -42,6 +47,7 @@
       <%= link_to "Log In", new_user_session_path, class:"nav-link" %>
     </span>
       <% end %>
+
     </div>
     </div>
       </nav>
