--- a/app/views/matches/edit.html.erb
+++ b/app/views/matches/edit.html.erb
@@ -1,5 +1,9 @@
+<div class="user-card">
 <h3>Are you sure you don't want to go to this event?</h3>
 
-<%= link_to 'Delete Match', match_path, method: :delete,
+<div class="btn btn-danger">
+  <%= link_to 'Delete Match?', match_path, method: :delete,
 
-                    data: { confirm: 'Are you sure?' } %>
+                      data: { confirm: 'Are you sure?' } %>
+</div>
+</div>
