--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,3 +1,4 @@
+<div class="user-card">
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
@@ -5,24 +6,28 @@
 
   <div class="field">
     Change your <%= f.label :avatar %>
-  <p>  <%= image_tag @user.avatar.url(:thumb) %> </p>
+  <p><%= image_tag @user.avatar.url(:thumb) %></p>
     <p> <%=f.file_field :avatar %> </p>
   </div>
+
 
   <div class="field">
     <%= f.label :first_name %><br />
     <%= f.text_field :firstName, autofocus: true, autocomplete: "firstName" %>
   </div>
 
+
   <div class="field">
     <%= f.label :last_name %><br />
     <%= f.text_field :lastName, autofocus: true, autocomplete: "lastName" %>
   </div>
 
+
   <div class="field">
     <%= f.label :location %><br />
     <%= f.text_field :location, autofocus: true, autocomplete: "location" %>
   </div>
+
 
   <div class="field">
     <%= f.label :email %><br />
@@ -34,7 +39,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+    <%= f.label :password %> <br><i>(leave blank if you don't want to change it)</i><br />
     <%= f.password_field :password, autocomplete: "off" %>
     <% if @minimum_password_length %>
       <br />
@@ -48,7 +53,7 @@
   </div>
 
   <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+    <%= f.label :current_password %> <br> <i>(we need your current password to confirm your changes)</i><br />
     <%= f.password_field :current_password, autocomplete: "off" %>
   </div>
 
@@ -62,3 +67,4 @@
 <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
 <%= link_to "Back", :back %>
+</div>
