--- a/app/assets/stylesheets/_event.scss
+++ b/app/assets/stylesheets/_event.scss
@@ -76,3 +76,14 @@ border-radius: 50px;
   color: #fff;
   text-align: center;
 }
+
+.feed-card {
+    background: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 100%;
+    height: 550px;
+    border-radius: 25px;
+    margin: auto;
+    text-align: center;
+    overflow: hidden;
+}
