--- a/app/views/feed/index.html.erb
+++ b/app/views/feed/index.html.erb
@@ -1,3 +1,6 @@
+
+<div class="container">
+  <div class="feed-card">  
 <% @activities.each do |activity| %>
 <div class="activity">
     <%= link_to activity.owner.username, activity.owner if activity.owner %>
@@ -5,3 +8,5 @@
   </div>
 <hr>
 <% end %>
+</div>
+</div>
