--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-
+    <script type='text/javascript' src='config.js'></script>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <link rel="icon" href="/assets/music.png">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
@@ -22,13 +22,6 @@
      <div class="collapse navbar-collapse" id="navbarResponsive">
          <div class="navbar-nav ml-auto">
     <% if user_signed_in? %>
-
-      <%= link_to 'Chat', rooms_show_path %>
-
-           
-      <div class="currentUserNavbar">
-        
-
         <span class="navbar-text">
         <%= link_to 'Chat', rooms_show_path, class:"nav-link" %>
       </span>
@@ -36,7 +29,7 @@
           <%= link_to 'Create Event', new_event_path, class:"nav-link" %>
         </span>
         <span class="navbar-text">
-        <%= link_to 'Edit Profile', edit_user_registration_path, class:"nav-link" %>
+        <%= link_to 'Edit', edit_user_registration_path, class:"nav-link" %>
         </span>
         <span class="navbar-text">
           <%= link_to'Logout', destroy_user_session_path, method: :delete, class:"nav-link"%>
@@ -53,7 +46,6 @@
       <%= link_to "Log In", new_user_session_path, class:"nav-link" %>
     </span>
       <% end %>
-
     </div>
   </div>
       </nav>
