--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,9 +1,15 @@
 <!-- <h1>Rooms#show</h1>
 <p>Find me in app/views/rooms/show.html.erb</p>
  -->
+<div class="chatwindow">
+ 	<h1>Chat Messages</h1>
+	
+ 	<div id="messages">
+ 		<%=render @messages %> <!-- this is rendering the message partial in the messages folder -->
+ 	</div>
+ 	<div class="sendmessageclass">
+	Message:
+	<input type="text" name="message" id="message">
+	<%= link_to('Send', '#', :onclick => "SendMessage();")  %>
 
- <h1>Chat Messages</h1>
-
- <div id="messages">
- 	<%=render @messages %> <!-- this is rendering the message partial in the messages folder -->
- </div>
+</div>
