--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,4 +1,10 @@
-<h3>Search for events and create new requests</h3>
+<div class="search-header">
+  <h3>Search for events and create new requests</h3>
+</div>
+
+<div class="search-feilds">
+
+
 <div class="search">
 <input type="text" id='search-value' value=''name="" size="40" >
 
@@ -24,4 +30,4 @@
     <%= e.date %>
     <hr>
 <% end %>
-
+</div>
