--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -9,7 +9,7 @@
 <div id='results'></div>
 <center>
 
-<h3 class='white-text'>search requests to match</h3>
+<h3 class='white-text'>search meetup requests</h3>
 
 <%= search_form_for @q, url: url_for(controller: 'events', action: 'new') do |f| %>
 
