--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,20 +22,18 @@
      <div class="collapse navbar-collapse" id="navbarResponsive">
          <div class="navbar-nav ml-auto">
     <% if user_signed_in? %>
-<<<<<<< HEAD
+
 
       <div class="currentUserNavbar">
       <span class="navbar-text">
-=======
-        <span class="navbar-text">
->>>>>>> 99ddbd8220b6e323ddeb363f87fb2727e4ec124d
+
         <%= link_to 'Chat', rooms_show_path, class:"nav-link" %>
       </span>
       <span class="navbar-text">
           <%= link_to 'Create Event', new_event_path, class:"nav-link" %>
         </span>
         <span class="navbar-text">
-        <%= link_to 'Edit', edit_user_registration_path, class:"nav-link" %>
+        <%= link_to 'Edit Profile', edit_user_registration_path, class:"nav-link" %>
         </span>
         <span class="navbar-text">
           <%= link_to'Logout', destroy_user_session_path, method: :delete, class:"nav-link"%>
