--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
         <%= link_to 'Chat', rooms_show_path, class:"nav-link" %>
       </span>
       <span class="navbar-text">
-          <%= link_to 'Create Event', new_event_path, class:"nav-link" %>
+          <%= link_to 'Create/Search Requests', new_event_path, class:"nav-link" %>
         </span>
         <span class="navbar-text">
         <%= link_to 'Edit Profile', edit_user_registration_path, class:"nav-link" %>
