--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -7,9 +7,9 @@
 
 <h1 class="header">Never Miss a Moment!</h1>
 
-<div class="container-fluid">
+<div class="container-fluid" >
  <div class="row align-items-start">
-  <div class="col-lg-8">
+  <div class="col-lg-8" id='event-index'>
     <img class="icons" src="/assets/ticket.png" height="50" alt="">
     <h1> Latest Meetup Requests </h1>
   <% @events.reverse.take(20).each do |e| %>
