--- a/app/assets/stylesheets/_event.scss
+++ b/app/assets/stylesheets/_event.scss
@@ -21,6 +21,14 @@
   border-radius:8px;
 }
 
+.box-content{
+  height:350px;
+  width:800px;
+  overflow:auto;
+  border-radius:8px;
+}
+
+
 .events-card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     margin: auto;
