--- a/app/assets/javascripts/api.js.erb
+++ b/app/assets/javascripts/api.js.erb
@@ -2,7 +2,6 @@ $(document).on("turbolinks:load", function(){
 var searchSubmit = document.getElementById('search-submit')
 var results = document.getElementById('results')
 var searchValue = document.getElementById('search-value').value
-var key = config.KEY
 
   searchSubmit.addEventListener('click', function() {
 
@@ -16,7 +15,7 @@ var key = config.KEY
   function search(value, results) {
     $.ajax({
     type:"GET",
-    url:"https://app.ticketmaster.com/discovery/v2/events.json?apikey="+key+"&keyword=" + value,
+    url:"https://app.ticketmaster.com/discovery/v2/events.json?apikey=<%= ENV['TICKETMASTER_API_KEY'] %>&keyword=" + value,
     async:true,
     dataType: "json",
     success: function(json) {
@@ -58,7 +57,7 @@ var key = config.KEY
 
                   var website = display.appendChild(document.createElement('a'));
                   website.href= json._embedded.events[i].url
-                  website.target= "_blank" 
+                  website.target= "_blank"
                   website.innerHTML= 'More Info/Purchase Tickets'
 
                   var price = display.appendChild(document.createElement('div'));
