--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,12 +1,12 @@
 <div class="search-fields">
 
 <div class="search">
-<input type="text" id='search-value' value=''name="" size="40" placeholder="search live nation events" >
+<input type="text" class='search-value' value=''name="" size="40" placeholder="search live nation events" >
 
-<input type="submit" id='search-submit' value='search'>
+<input type="submit" class='search-submit' value='search'>
 
 <center>
-<div id='results'></div>
+<div class='results'></div>
 <center>
 
 <h3>search meetup requests</h3>
@@ -27,3 +27,8 @@
 <% end %>
 </div>
 </div>
+
+#dummy divs for JS functionality TODO:research single page JS
+<div class='guest-user-btn js'></div>
+<div class='email-field js'></div>
+<div class='password-field js'></div>
