--- a/app/assets/javascripts/guestuser.js.erb
+++ b/app/assets/javascripts/guestuser.js.erb
@@ -1,12 +1,10 @@
 $(document).on("turbolinks:load", function(){
-    var emailField = document.getElementsByClassName('email-field');
-    var passwordField = document.getElementsByClassName('password-field');
-    var guestUserBtn = document.getElementsByClassName('guest-user-btn');
+    var emailField = document.getElementsByClassName('email-field')[0];
+    var passwordField = document.getElementsByClassName('password-field')[0];
+    var guestUserBtn = document.getElementsByClassName('guest-user-btn')[0];
 
-    guestUserBtn[0].addEventListener("click", function(){
-        console.log('click');
-        
-        emailField[0].value = 'testuser@gmail.com'
-        passwordField[0].value =  'jessica' 
+    guestUserBtn.addEventListener("click", function(){  
+        emailField.value = 'guestuser@gmail.com'
+        passwordField.value =  'jessica' 
     })
 })
