--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,11 +41,8 @@
       </div>
 
     <% else %>
-      <span class="navbar-text">
-      <%= link_to "Sign Up", new_user_registration_path, class:"nav-link" %>
-    </span>
     <span class="navbar-text">
-      <%= link_to "Log In", new_user_session_path, class:"nav-link" %>
+      <%= link_to "Log In/Sign Up", new_user_session_path, class:"nav-link" %>
     </span>
       <% end %>
 
