--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,7 +11,7 @@ Followers
 <p> <%=@user.aboutMe%> </p>
 
 <div class="events">
-<% if @user.id == current_user.id %>
+<% if user_signed_in? && @user.id == current_user.id %>
   <% if @user.events.exists? %>
     <div>YOUR MEETUP REQUESTS:</div>
     <% @user.events.each do |e| %>
